HDFS-1824. delay instantiation of file system object until it is needed (linked to HADOOP-7207)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1092524 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -178,6 +178,9 @@ Trunk (unreleased changes)
     HDFS-1828. TestBlocksWithNotEnoughRacks intermittently fails assert.
     (Matt Foley via eli)
 
+    HDFS-1824. delay instantiation of file system object until it is
+     needed (linked to HADOOP-7207) (boryas)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
