HDFS-1831. Fix append bug in FileContext and implement CreateFlag checks. Contributed by Suresh Srinivas.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1092584 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -184,6 +184,9 @@ Trunk (unreleased changes)
     HDFS-1824. delay instantiation of file system object until it is
      needed (linked to HADOOP-7207) (boryas)
 
+    HDFS-1831. Fix append bug in FileContext and implement CreateFlag
+    check (related to HADOOP-7223). (suresh)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
