MAPREDUCE-2202. Generalize CLITest structure and interfaces to facilitate upstream adoption (e.g. for web or system testing). Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1094093 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -62,6 +62,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2367. Allow using a file to exclude certain tests from build.
     (todd)
+
+    MAPREDUCE-2202. Generalize CLITest structure and interfaces to faciliate
+    upstream adoption (e.g. for web or system testing). (cos)
     
   OPTIMIZATIONS
     
