HDFS-1806. TestBlockReport.blockReport_08() and _09() are timing-dependent and likely to fail on fast servers. Contributed by Matt Foley.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1095235 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -654,6 +654,9 @@ Release 0.22.0 - Unreleased
     HDFS-1821. Fix username resolution in NameNode.createSymlink(..) and
     FSDirectory.addSymlink(..).  (John George via szetszwo)
 
+    HDFS-1806. TestBlockReport.blockReport_08() and _09() are timing-dependent
+    and likely to fail on fast servers. (Matt Foley via eli)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
