HDFS-1666. Disable failing hdfsproxy test TestAuthorizationFilter. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1095267 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -660,6 +660,8 @@ Release 0.22.0 - Unreleased
     HDFS-1845. Symlink comes up as directory after namenode restart.
     (John George via eli)
 
+    HDFS-1666. Disable failing hdfsproxy test TestAuthorizationFilter (todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
