--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -130,6 +130,8 @@ Trunk (unreleased changes)
     HDFS-1854. make failure message more useful in
     DFSTestUtil.waitReplication(). (Matt Foley via eli)
 
+    HDFS-1562. Add rack policy tests. (eli)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
