HDFS-1856. TestDatanodeBlockScanner waits forever, errs without giving information. Contributed by Matt Foley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1095991 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -131,6 +131,9 @@ Trunk (unreleased changes)
     DFSTestUtil.waitReplication(). (Matt Foley via eli)
 
     HDFS-1562. Add rack policy tests. (eli)
+ 
+    HDFS-1856. TestDatanodeBlockScanner waits forever, errs without giving 
+    information. (Matt Foley via eli)
 
   OPTIMIZATIONS
 
