HDFS-1594. When the disk becomes full Namenode is getting shutdown and not able to recover. Contributed by Aaron T. Myers
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1096010 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -207,6 +207,9 @@ Trunk (unreleased changes)
     HDFS-1831. Fix append bug in FileContext and implement CreateFlag
     check (related to HADOOP-7223). (suresh)
 
+    HDFS-1594. When the disk becomes full Namenode is getting shutdown and 
+    not able to recover. (Aaron T. Myers via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
