MAPREDUCE-2448. NoSuchMethodError: org.apache.hadoop.hdfs.TestDatanodeBlockScanner.corruptReplica(..). Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1096520 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -130,6 +130,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2426. Make TestFairSchedulerSystem fail with more verbose output
     (todd)
 
+    MAPREDUCE-2448. NoSuchMethodError:
+    org.apache.hadoop.hdfs.TestDatanodeBlockScanner.corruptReplica(..) (eli)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
