HDFS-1861. Rename dfs.datanode.max.xcievers and bump its default value. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1096647 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -431,6 +431,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1582. Remove auto-generated native build files. (rvs via eli)
 
+    HDFS-1861. Rename dfs.datanode.max.xcievers and bump its default value.
+    (eli)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
