MAPREDUCE-2428. start-mapred.sh script fails if HADOOP_HOME is not set. Contributed by Tom White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1096649 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -660,6 +660,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2437. SLive uses only part* files to generating the final report.
     (shv)
 
+    MAPREDUCE-2428. start-mapred.sh script fails if HADOOP_HOME is not set.
+    (tomwhite via eli)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
