HDFS-1295. Improve namenode restart times by short-circuiting the first block reports from datanodes. Contributed by Matt Foley.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1096935 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -135,6 +135,9 @@ Trunk (unreleased changes)
     HDFS-1856. TestDatanodeBlockScanner waits forever, errs without giving 
     information. (Matt Foley via eli)
 
+    HDFS-1295. Improve namenode restart times by short-circuiting the
+    first block reports from datanodes. (Matt Foley via suresh)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
