Updated CHANGES.txt for my previous commit (HDFS-1843).
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1096974 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -138,6 +138,9 @@ Trunk (unreleased changes)
     HDFS-1295. Improve namenode restart times by short-circuiting the
     first block reports from datanodes. (Matt Foley via suresh)
 
+    HDFS-1843. Discover file not found early for file append. 
+    (Bharath Mundlapudi via jitendra)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
