HDFS-1808. TestBalancer waits forever, errs without giving information. Contributed by Matt Foley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1096994 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -220,6 +220,9 @@ Trunk (unreleased changes)
     by throwing an error to indicate the editlog needs to be empty.
     (suresh)
 
+    HDFS-1808. TestBalancer waits forever, errs without giving information.
+    (Matt Foley via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
