HDFS-1829. TestNodeCount waits forever, errs without giving information. Contributed by Matt Foley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1096995 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -223,6 +223,9 @@ Trunk (unreleased changes)
     HDFS-1808. TestBalancer waits forever, errs without giving information.
     (Matt Foley via eli)
 
+    HDFS-1829. TestNodeCount waits forever, errs without giving information.
+    (Matt Foley via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
