HDFS-1862. Improve test reliability of HDFS-1594. Contributed by Aaron T. Myers
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1097207 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -141,6 +141,8 @@ Trunk (unreleased changes)
     HDFS-1843. Discover file not found early for file append. 
     (Bharath Mundlapudi via jitendra)
 
+    HDFS-1862. Improve test reliability of HDFS-1594. (Aaron T. Myers via eli)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
