HDFS-1846. Preallocate edit log with OP_INVALID instead of zero bytes to ensure blocks are actually allocated. Contributed by Aaron T. Myers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1097329 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -143,6 +143,9 @@ Trunk (unreleased changes)
 
     HDFS-1862. Improve test reliability of HDFS-1594. (Aaron T. Myers via eli)
 
+    HDFS-1846. Preallocate edit log with OP_INVALID instead of zero bytes
+    to ensure blocks are actually allocated. (Aaron T. Myers via todd)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
