MAPREDUCE-1978. Rumen TraceBuilder should provide recursive input folder scanning.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1098519 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -83,6 +83,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-1978. Rumen TraceBuilder should provide recursive
+    input folder scanning.
+
     MAPREDUCE-2416. Remove the restriction of specifying group names in
     users-list file for Gridmix in RoundRobinUserResolver mode.
 
