HDFS-1870. Move and rename DFSClient.LeaseChecker to a seperated class LeaseRenewer.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1098781 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -380,6 +380,9 @@ Trunk (unreleased changes)
     HDFS-1741. Provide a minimal pom file to allow integration of HDFS into Sonar
     analysis (cos)
 
+    HDFS-1870. Move and rename DFSClient.LeaseChecker to a seperated class
+    LeaseRenewer.  (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
