--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -151,6 +151,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2448. NoSuchMethodError:
     org.apache.hadoop.hdfs.TestDatanodeBlockScanner.corruptReplica(..) (eli)
 
+    MAPREDUCE-2465. Disable raid contrib which is unable to compile after
+    HDFS federation merge. (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
