--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -154,6 +154,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2465. Disable raid contrib which is unable to compile after
     HDFS federation merge. (todd)
 
+    MAPREDUCE-2460. Fix flaky test TestFairSchedulerSystem. (todd)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
