HDFS-1876. One MiniDFSCluster constructor ignores numDataNodes parameter. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1098867 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -484,6 +484,9 @@ Trunk (unreleased changes)
     HDFS-1871. Mapreduce build fails due to MiniDFSCluster change from
     HDFS-1052. (suresh)
 
+    HDFS-1876. One MiniDFSCluster constructor ignores numDataNodes parameter
+    (todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
