HDFS-1773. Do not show decommissioned datanodes, which are not in both include and exclude lists, on web and JMX interfaces.  Contributed by Tanping Wang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1099285 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -487,6 +487,10 @@ Trunk (unreleased changes)
     HDFS-1876. One MiniDFSCluster constructor ignores numDataNodes parameter
     (todd)
 
+    HDFS-1773. Do not show decommissioned datanodes, which are not in both
+    include and exclude lists, on web and JMX interfaces.
+    (Tanping Wang via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
