DFS-1888. MiniDFSCluster#corruptBlockOnDatanodes() access must be public. Contributed by Suresh Srinvias.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1099525 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -491,6 +491,9 @@ Trunk (unreleased changes)
     include and exclude lists, on web and JMX interfaces.
     (Tanping Wang via szetszwo)
 
+    HDFS-1888. MiniDFSCluster#corruptBlockOnDatanodes() access must be
+    public. (suresh)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
