MAPREDUCE-2472. Extra whitespace in mapred.child.java.opts breaks JVM initialization. Contributed by Aaron T. Myers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1099590 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -692,6 +692,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2457. Job submission should inject group.name on the JobTracker
     (Alejandro Abdelnur via todd)
 
+    MAPREDUCE-2472. Extra whitespace in mapred.child.java.opts breaks JVM
+    initialization. (Aaron T. Myers via todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
