HDFS-1889. incorrect path in start/stop dfs script. Contributd by John George
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1099640 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -494,6 +494,8 @@ Trunk (unreleased changes)
     HDFS-1888. MiniDFSCluster#corruptBlockOnDatanodes() access must be
     public. (suresh)
 
+    HDFS-1889. incorrect path in start/stop dfs script. (John George via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
