HDFS-1890. Improve the name, class and value type of the map LeaseRenewer.pendingCreates.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1099641 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -496,6 +496,9 @@ Trunk (unreleased changes)
 
     HDFS-1889. incorrect path in start/stop dfs script. (John George via eli)
 
+    HDFS-1890. Improve the name, class and value type of the map
+    LeaseRenewer.pendingCreates.  (szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
