MAPREDUCE-2474. Add docs to the new API Partitioner on how to access the Job Configuration. Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1099847 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -74,6 +74,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2420. JobTracker should be able to renew delegation token over 
     HTTP (Boris Shkolnik via jitendra)
+
+    MAPREDUCE-2474. Add docs to the new API Partitioner on how to access the
+    Job Configuration. (Harsh J Chouraria via todd)
     
   OPTIMIZATIONS
     
