HDFS-1891. Disable IPV6 for junit tests to fix TestBackupNode failure. Contributed by Suresh Srinivas.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1099972 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -499,6 +499,9 @@ Trunk (unreleased changes)
     HDFS-1890. Improve the name, class and value type of the map
     LeaseRenewer.pendingCreates.  (szetszwo)
 
+    HDFS-1891. Disable IPV6 for junit tests to fix TestBackupNode failure.
+    (suresh)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
