HDFS-1898. Tests failing on trunk due to use of NameNode.format. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1100031 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -502,6 +502,9 @@ Trunk (unreleased changes)
     HDFS-1891. Disable IPV6 for junit tests to fix TestBackupNode failure.
     (suresh)
 
+    HDFS-1898. Tests failing on trunk due to use of NameNode.format.
+    (todd via eli)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
