--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -78,6 +78,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2474. Add docs to the new API Partitioner on how to access the
     Job Configuration. (Harsh J Chouraria via todd)
     
+    MAPREDUCE-2475. Disable IPV6 for junit tests. (suresh srinivas via mahadev)
+ 
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
