HDFS-671. Documentation change for updated configuration keys. Contributed by Tom White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1100054 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -894,6 +894,9 @@ Release 0.22.0 - Unreleased
     HDFS-1850. DN should transmit absolute failed volume count rather than 
     increments to the NN. (eli)
 
+    HDFS-671. Documentation change for updated configuration keys. 
+    (tomwhite via eli)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
