MAPREDUCE-2422. Removed unused internal methods from DistributedCache.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1100409 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -79,6 +79,9 @@ Trunk (unreleased changes)
     Job Configuration. (Harsh J Chouraria via todd)
     
     MAPREDUCE-2475. Disable IPV6 for junit tests. (suresh srinivas via mahadev)
+
+    MAPREDUCE-2422. Removed unused internal methods from DistributedCache.
+    (tomwhite)
  
   OPTIMIZATIONS
     
