HDFS-1865. Share LeaseRenewer among DFSClients so that there is only a LeaseRenewer thread per namenode per user.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101282 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -389,6 +389,9 @@ Trunk (unreleased changes)
     HDFS-1890. Improve the name, class and value type of the map
     LeaseRenewer.pendingCreates.  (szetszwo)
 
+    HDFS-1865. Share LeaseRenewer among DFSClients so that there is only a
+    LeaseRenewer thread per namenode per user.  (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
