HDFS-1827. Fix timeout problem in TestBlockReplacement.  Contributed by Matt Foley
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101293 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -514,6 +514,9 @@ Trunk (unreleased changes)
     HDFS-1902. Fix setrep path display for TestHDFSCLI.  (Daryn Sharp
     via szetszwo)
 
+    HDFS-1827. Fix timeout problem in TestBlockReplacement.  (Matt Foley
+    via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
