--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -164,6 +164,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2460. Fix flaky test TestFairSchedulerSystem. (todd)
 
+    MAPREDUCE-2451. Log the details from health check script at the
+    JobTracker. (Thomas Graves via cdouglas)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
