--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -392,6 +392,9 @@ Trunk (unreleased changes)
     HDFS-1865. Share LeaseRenewer among DFSClients so that there is only a
     LeaseRenewer thread per namenode per user.  (szetszwo)
 
+    HDFS-1906. Remove logging exception stack trace in client logs when one of
+    the datanode targets to read from is not reachable. (suresh)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
