HDFS-1873. Federation: Add cluster management web console. Contributed by Tanping Wang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101324 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -270,6 +270,9 @@ Trunk (unreleased changes)
     
     HDFS-1751. Intrinsic limits for HDFS files, directories (daryn via boryas).
 
+    HDFS-1873. Federation: Add cluster management web console.
+    (Tanping Wang via suresh)
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
