HFDS-1826. NameNode should save image to name directories in parallel during upgrade. Contributed by Matt FoleIy.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101343 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -405,6 +405,9 @@ Trunk (unreleased changes)
 
     HDFS-1601. Pipeline ACKs are sent as lots of tiny TCP packets (todd)
 
+    HDFS-1826. NameNode should save image to name directories in parallel
+    during upgrade. (Matt Foley via hairong)
+
   BUG FIXES
 
     HDFS-1449. Fix test failures - ExtendedBlock must return 
