MAPREDUCE-2456. Log the reduce taskID and associated TaskTrackers with failed fetch notifications in the JobTracker log. Contributed by Jeffrey Naisbitt
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1101628 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -82,7 +82,11 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2422. Removed unused internal methods from DistributedCache.
     (tomwhite)
- 
+
+    MAPREDUCE-2456. Log the reduce taskID and associated TaskTrackers with
+    failed fetch notifications in the JobTracker log.
+    (Jeffrey Naisbitt via cdouglas)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
