HDFS-1908. Fix a NullPointerException in fi.DataTransferTestUtil.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101675 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -526,6 +526,9 @@ Trunk (unreleased changes)
     HDFS-1827. Fix timeout problem in TestBlockReplacement.  (Matt Foley
     via szetszwo)
 
+    HDFS-1908. Fix a NullPointerException in fi.DataTransferTestUtil.
+    (szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
