HDFS-1544. Ivy resolve force mode should be turned off by default. Contributed by Luke Lu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101737 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -921,6 +921,9 @@ Release 0.22.0 - Unreleased
     HDFS-671. Documentation change for updated configuration keys. 
     (tomwhite via eli)
 
+    HDFS-1544. Ivy resolve force mode should be turned off by default.
+    (Luke Lu via tomwhite)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
