--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -710,6 +710,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2472. Extra whitespace in mapred.child.java.opts breaks JVM
     initialization. (Aaron T. Myers via todd)
 
+    MAPREDUCE-2222. Ivy resolve force mode should be turned off by default.
+    (Luke Lu via tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
