HDFS 1911 HDFS tests for the newly added viewfs (sanjay Radia)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1101753 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -273,6 +273,9 @@ Trunk (unreleased changes)
     HDFS-1873. Federation: Add cluster management web console.
     (Tanping Wang via suresh)
 
+    HDFS 1911 HDFS tests for the newly added viewfs
+
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
