HDFS-1912. Update tests for FsShell standardized error messages.  Contributed by Daryn Sharp
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102005 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -532,6 +532,9 @@ Trunk (unreleased changes)
     HDFS-1908. Fix a NullPointerException in fi.DataTransferTestUtil.
     (szetszwo)
 
+    HDFS-1912. Update tests for FsShell standardized error messages.
+    (Daryn Sharp via szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
