MAPREDUCE-2486. Incorrect snapshot dependency published in .pom files. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1102136 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -713,6 +713,9 @@ Release 0.22.0 - Unreleased
     MAPREDUCE-2222. Ivy resolve force mode should be turned off by default.
     (Luke Lu via tomwhite)
 
+    MAPREDUCE-2486. Incorrect snapshot dependency published in .pom files
+    (todd)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
