HDFS-1378. Edit log replay should track and report file offsets in case of errors. Contributed by Aaron T. Myers and Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102146 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -401,6 +401,9 @@ Trunk (unreleased changes)
     HDFS-1906. Remove logging exception stack trace in client logs when one of
     the datanode targets to read from is not reachable. (suresh)
 
+    HDFS-1378. Edit log replay should track and report file offsets in case of
+    errors. (Aaron T. Myers and Todd Lipcon via todd)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
