MAPREDUCE-869. Documentation for config to set map/reduce task environment. Contributed by Alejandro Abdelnur.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1102148 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -87,6 +87,9 @@ Trunk (unreleased changes)
     failed fetch notifications in the JobTracker log.
     (Jeffrey Naisbitt via cdouglas)
 
+    MAPREDUCE-869. Documentation for config to set map/reduce task environment
+    (Alejandro Abdelnur via todd)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
