HDFS-1621. Fix references to hadoop-common-${version} in build.xml. Contributed by Jolly Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1102153 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -939,6 +939,9 @@ Release 0.22.0 - Unreleased
     HDFS-1897. Documentation refers to removed option dfs.network.script
     (Andrew Whang via todd)
 
+    HDFS-1621. Fix references to hadoop-common-${version} in build.xml
+    (Jolly Chen via todd)
+
 Release 0.21.1 - Unreleased
     HDFS-1466. TestFcHdfsSymlink relies on /tmp/test not existing. (eli)
 
