MAPREDUCE-2410. Add entry to streaming FAQ about how streaming reducers receive keys. Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1102184 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -90,6 +90,9 @@ Trunk (unreleased changes)
     MAPREDUCE-869. Documentation for config to set map/reduce task environment
     (Alejandro Abdelnur via todd)
 
+    MAPREDUCE-2410. Add entry to streaming FAQ about how streaming reducers
+    receive keys. (Harsh J Chouraria via todd)
+
   OPTIMIZATIONS
     
     MAPREDUCE-2026. Make JobTracker.getJobCounters() and
